glx/testdata/invalid/invalid-assertion-properties/assertions/invalid-claims.glx
assertions:
  assertion-invalid-property:
    subject:
      person: person-father
    property: nonexistent_property
    value: "some value"
    confidence: high
